--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,13 +3,14 @@ project:
   output-dir: docs
 
 website:
-  title: "Your Name - MUSA 5080 Portfolio"
+  title: "Christine Cui - MUSA 5080 Portfolio"
   navbar:
     left:
       - href: index.qmd
         text: Home
       - href: weekly-notes/
         text: Weekly Notes
+      
 
 format:
   html:
