--- a/_quarto.yml
+++ b/_quarto.yml
@@ -16,6 +16,10 @@ website:
             text: "Week 1"
           - href: weekly-notes/week-02-notes.qmd
             text: "Week 2"
+      - text: Labs
+        menu:
+          - href: labs/lab_0/
+            text: "Lab 0: dplyr Basics"
 format:
   html:
     theme: cosmo
