--- a/_quarto.yml
+++ b/_quarto.yml
@@ -31,9 +31,9 @@ website:
           - href: labs/lab_0/lab0.qmd
             text: "Lab 0: Dplyr Basics"
           - href: labs/lab_1/assignment1_template.qmd
-            text: "Assignment 1: Census Data Exploration"
+            text: "Lab 1: Census Data Exploration"
           - href: labs/lab_2/assignment2_template.qmd
-            text: "Assignment 2: Spatial Analysis and Visualization"
+            text: "Lab 2: Spatial Analysis and Visualization"
 format:
   html:
     theme: cosmo
