--- a/_quarto.yml
+++ b/_quarto.yml
@@ -24,7 +24,7 @@ website:
             text: "In-Class Lab 4: Spatial Operations with Pennsylvania Data" 
           - href: weekly-notes/week-05-notes.qmd
             text: "Week 5: Introduction to Linear Regression"
-      - text: Labs
+      - text: "Labs"
         menu:
           - href: labs/lab_0/lab0.qmd
             text: "Lab 0: Dplyr Basics"
