--- a/_quarto.yml
+++ b/_quarto.yml
@@ -38,7 +38,7 @@ website:
           text: "In-Class Lab 10: Georgia DOC Policy Advisory Challenge"
       - text: "Labs"
         menu:
-        - href: labs/lab_0/lab0.qmd
+        - href: labs/lab_0/lab0_template.qmd
           text: "Lab 0: Dplyr Basics"
         - href: labs/lab_1/assignment1_template.qmd
           text: "Lab 1: Census Data Exploration"
