--- a/_quarto.yml
+++ b/_quarto.yml
@@ -46,6 +46,8 @@ website:
           text: "Lab 2: Spatial Analysis and Visualization"
         - href: labs/lab_4/assignment4_template.qmd
           text: "Lab 4: Spatial Predictive Analysis"
+        - href: labs/lab_5/Indego_SpaceTime_Prediction.qmd
+          text: "Lab 5: Space-Time Prediction of Bike Share Demand"
       - text: "Midterm Project"
         menu:
         - href: midterm/Slides/CuiXinyuan_Presentation.qmd
